tests/cases/generics/errors/generic-enum-constant-mismatch.ari
const BAD: Option[i32] = Some<bool>(true);

fn main() -> i64 {
  let value = BAD;
  return 0;
}
